# python-rtspm

./: .gitignore  CHANGELOG.md  README.md  buildext.py  pyproject.toml  setup.py
.github/workflows/: build-publish.yaml  build.yaml  main.yaml
py_rtspm/: __init__.py  version.py
rtspm/: __init__.py  _setup_spm.py  _spm_imatrix.py  _spm_inv_b_cdf.py  _spm_inv_t_cdf.py  _spm_matrix.py  _spm_realign.py  _spm_realign_rt.py  _spm_reslice.py  _spm_reslice_rt.py  _spm_setup.py  _spm_slice_vol.py  _spm_smoothing.py  errors.py  logging.py  spm_imatrix.py  spm_inv_b_cdf.py  spm_inv_t_cdf.py  spm_realign.py  spm_smoothing.py  version.py
src/: bsplines.cpp  bsplines.h  pyspm.cpp  rtspm.cpp  spm_bsplinc.cpp  spm_bsplinc.h  spm_bsplins.cpp  spm_bsplins.h  spm_conv_vol.cpp  spm_conv_vol.h  spm_datatypes.h  spm_make_lookup.cpp  spm_mapping.cpp  spm_mapping.h  spm_slice_vol.cpp  spm_slice_vol.h  spm_vol_access.cpp  spm_vol_access.h  spm_vol_utils.cpp
tests/: conftest.py
tests/data/: 001_000007_000006.dcm  P.mat  P_psc_cont.mat  P_psc_int.mat  mainLoopData.mat  prot_inds_cont.mat  prot_inds_int.mat  reslVol.mat  reslVol_matlab.mat  spm_psc_cont.mat  spm_psc_int.mat
tests/pyspm/: test_spm.py  utils.py
tests/rtspm/: test_setup_spm.py  test_spm.py
tests/test_rtspm/: test_setup_spm.py
