[tool.poetry]
name = "python-rtspm"
version = "0.2.5"
description = "Python adaptation of SPM functions for real-time fMRI analysis"
authors = ["OpenNFT Team <opennft@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
keywords = ["neurofeedback", "neurofeedback-training", "opennft", "spm"]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
]

packages = [
    { include = "rtspm" },
]

include = [
    "src/*"
]

build = "buildext.py"

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
importlib-metadata = "^4.8.1"
numpy = ">=1.19.2"
scipy = ">=1.5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pydicom = "^2.2.2"
nibabel = "^3.2.1"
pybind11 = "^2.8.1"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools",
    "pybind11",
]
build-backend = "poetry.core.masonry.api"
